force-app/main/default/objects/Account/fields/Enrolled_in_Their_Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_Their_Partner_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled in Their Partner Program?</label>
    <type>Checkbox</type>
</CustomField>