force-app/main/default/objects/Account/fields/ERM__c.field-meta.xml
<CustomField>
    <fullName>ERM__c</fullName>
    <label>ERM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intapp Relationships</fullName>
            </value>
            <value>
                <fullName>IntroHive</fullName>
            </value>
            <value>
                <fullName>InterAction IQ</fullName>
            </value>
            <value>
                <fullName>ContactNet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>