force-app/main/default/objects/Account/fields/Ethical_Walls__c.field-meta.xml
<CustomField>
    <fullName>Ethical_Walls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidentiality Management Platform</label>
    <type>Checkbox</type>
</CustomField>