force-app/main/default/objects/Account/fields/Ethical_Walls_app__c.field-meta.xml
<CustomField>
    <fullName>Ethical_Walls_app__c</fullName>
    <description>To indicate what confidentiality application the firm is using.</description>
    <inlineHelpText>What is the confidentiality product that the account currently uses?</inlineHelpText>
    <label>Confidentiality Management Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMH Ethical Wall</fullName>
            </value>
            <value>
                <fullName>Aztech EthicalWall</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>Compliguard</fullName>
            </value>
            <value>
                <fullName>Custom (Homegrown)</fullName>
            </value>
            <value>
                <fullName>DocAuto iMPrivate</fullName>
            </value>
            <value>
                <fullName>EIM WincWall</fullName>
            </value>
            <value>
                <fullName>HBR Matter-Based Security</fullName>
            </value>
            <value>
                <fullName>iManage</fullName>
            </value>
            <value>
                <fullName>IntApp Wall Builder</fullName>
            </value>
            <value>
                <fullName>LegalKEY Ethical Walls</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Matrix Logic Custodian</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>NSphere Systems</fullName>
            </value>
            <value>
                <fullName>Olson Consulting (Security Guard)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prosperoware</fullName>
            </value>
            <value>
                <fullName>RBRO MasterEthics</fullName>
            </value>
            <value>
                <fullName>Younts Consulting (The Wall)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>