force-app/main/default/objects/Account/fields/Exec_Sponsor_L_P_Account_Program__c.field-meta.xml
<CustomField>
    <fullName>Exec_Sponsor_L_P_Account_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exec Sponsor L&amp;P Account Program</label>
    <type>Checkbox</type>
</CustomField>