force-app/main/default/objects/Account/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Experience - On Prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>