force-app/main/default/objects/Account/fields/Experience_Prospect_New__c.field-meta.xml
<CustomField>
    <fullName>Experience_Prospect_New__c</fullName>
    <label>Experience Prospect New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer (Experience - Cloud)</fullName>
            </value>
            <value>
                <fullName>Customer (Experience)</fullName>
            </value>
            <value>
                <fullName>Engaged Customer</fullName>
            </value>
            <value>
                <fullName>Engaged Non-Customer</fullName>
            </value>
            <value>
                <fullName>Unengaged Customer</fullName>
            </value>
            <value>
                <fullName>Unengaged Non-Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>