force-app/main/default/objects/Account/fields/Extensive_Procurement__c.field-meta.xml
<CustomField>
    <fullName>Extensive_Procurement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this firm have an extensive procurement process that we should be aware of?</description>
    <inlineHelpText>Does this firm have an extensive procurement process that we should be aware of?</inlineHelpText>
    <label>Extensive Procurement Process?</label>
    <type>Checkbox</type>
</CustomField>