force-app/main/default/objects/Account/fields/Fee_Split_MAS__c.field-meta.xml
<CustomField>
    <fullName>Fee_Split_MAS__c</fullName>
    <description>For Accounting Firms, percentage of revenues coming from Management Advisory Services.</description>
    <inlineHelpText>For Accounting Firms, percentage of revenues coming from Management Advisory Services.</inlineHelpText>
    <label>Fee Split - MAS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>