force-app/main/default/objects/Account/fields/Fee_Split_Tax__c.field-meta.xml
<CustomField>
    <fullName>Fee_Split_Tax__c</fullName>
    <description>For Accounting Firms, percentage of revenues coming from Tax services.</description>
    <inlineHelpText>For Accounting Firms, percentage of revenues coming from Tax services.</inlineHelpText>
    <label>Fee Split - Tax</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>