force-app/main/default/objects/Account/fields/Filesharing__c.field-meta.xml
<CustomField>
    <fullName>Filesharing__c</fullName>
    <description>What does the firm use to share files/access through mobile devices?</description>
    <inlineHelpText>What does the firm use to share files/access through mobile devices?</inlineHelpText>
    <label>Filesharing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accellion</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>HighQ</fullName>
            </value>
            <value>
                <fullName>Hightail</fullName>
            </value>
            <value>
                <fullName>ShareFile</fullName>
            </value>
            <value>
                <fullName>SpringCM</fullName>
            </value>
            <value>
                <fullName>TitanFile</fullName>
            </value>
            <value>
                <fullName>Workshare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>