force-app/main/default/objects/Account/fields/Firm_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Firm_Categorization__c</fullName>
    <description>The C-team has asked to add a new field to the account to track the “firm categorization” in terms of the Top30 L&amp;P program</description>
    <label>Firm Categorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verein</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Challenger</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Market Pressure</fullName>
                <isActive>false</isActive>
                <label>Market Pressure</label>
            </value>
            <value>
                <fullName>Top Tier/White Glove</fullName>
                <isActive>false</isActive>
                <label>Top Tier/White Glove</label>
            </value>
            <value>
                <fullName>Verein/Network</fullName>
                <isActive>false</isActive>
                <label>Verein/Network</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>