force-app/main/default/objects/Account/fields/Firm_Dissolved__c.field-meta.xml
<CustomField>
    <fullName>Firm_Dissolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a Firm has dissolved, this box is checked. We use this to identify firms that should be excluded from current reports, but we retain the ability to report on our history with the former firm.</description>
    <inlineHelpText>If a Firm has dissolved, this box is checked. We use this to identify firms that should be excluded from current reports, but we retain the ability to report on our history with the former firm.</inlineHelpText>
    <label>Firm Dissolved</label>
    <type>Checkbox</type>
</CustomField>