force-app/main/default/objects/Account/fields/Firm_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Firm_Initiatives__c</fullName>
    <inlineHelpText>What are the firm initiatives in the next 6-12 months?</inlineHelpText>
    <label>Firm Initiatives</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>