force-app/main/default/objects/Account/fields/Firm_Maturity_Status__c.field-meta.xml
<CustomField>
    <fullName>Firm_Maturity_Status__c</fullName>
    <inlineHelpText>Relates to where a firm sits on a range of evolution from Transaction to Centralized.   Factors include:  formality, centralization, optimization of processes, and strategic vision.</inlineHelpText>
    <label>Firm Maturity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Decentralized</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Centralized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>