force-app/main/default/objects/Account/fields/Firm_s_perception_of_Intapp__c.field-meta.xml
<CustomField>
    <fullName>Firm_s_perception_of_Intapp__c</fullName>
    <inlineHelpText>What does the firm think about Intapp?</inlineHelpText>
    <label>Firm’s perception of Intapp</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>