force-app/main/default/objects/Account/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <label>Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Flow - Cloud</fullName>
            </value>
            <value>
                <fullName>Flow - On Prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>