force-app/main/default/objects/Account/fields/Flow_Certification__c.field-meta.xml
<CustomField>
    <fullName>Flow_Certification__c</fullName>
    <label>Flow Certification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certification in process</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Certified - Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>