force-app/main/default/objects/Account/fields/Flow_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Certification_Date__c</fullName>
    <label>Flow Certification Date</label>
    <type>Date</type>
</CustomField>