force-app/main/default/objects/Account/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <description>This was created for the bizdev team to capture information regarding the focus of potential partners.</description>
    <label>Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Workflow/BPM</fullName>
            </value>
            <value>
                <fullName>Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Enterprise Software</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Content Management</fullName>
            </value>
            <value>
                <fullName>EAI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>