force-app/main/default/objects/Account/fields/Future_Lawyer_FE_Uplift_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Future_Lawyer_FE_Uplift_Commitments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by Jason Wood ticket 32380</description>
    <label>Future Lawyer/FE Uplift Commitments</label>
    <type>Checkbox</type>
</CustomField>