force-app/main/default/objects/Account/fields/Has_Remaining_Whitespace__c.field-meta.xml
<CustomField>
    <fullName>Has_Remaining_Whitespace__c</fullName>
    <formula>false</formula>
    <label>Has Remaining Whitespace</label>
    <type>Checkbox</type>
</CustomField>