force-app/main/default/objects/Account/fields/Has_Remaining_Whitespace_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Has_Remaining_Whitespace_Conflicts__c</fullName>
    <formula>False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Remaining Whitespace (Conflicts)</label>
    <type>Checkbox</type>
</CustomField>