force-app/main/default/objects/Account/fields/Has_Remaining_Whitespace_Intake__c.field-meta.xml
<CustomField>
    <fullName>Has_Remaining_Whitespace_Intake__c</fullName>
    <formula>FALSE</formula>
    <label>Has Remaining Whitespace (Intake)</label>
    <type>Checkbox</type>
</CustomField>