force-app/main/default/objects/Account/fields/Heat_Mapping_CIO__c.field-meta.xml
<CustomField>
    <fullName>Heat_Mapping_CIO__c</fullName>
    <description>Describes how well aware the CIO of the firm is of IntApp corporately and of all of products and their value propositions (3 is the highest).</description>
    <label>Awareness Index - CIO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>