force-app/main/default/objects/Account/fields/Heat_Mapping_Finance__c.field-meta.xml
<CustomField>
    <fullName>Heat_Mapping_Finance__c</fullName>
    <description>Describes how well aware the applications manager of the firm is of IntApp corporately and of Time Builder and its value proposition (3 is the highest).</description>
    <label>Awareness Index - Finance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>