force-app/main/default/objects/Account/fields/IB_Partner_Customer_Of__c.field-meta.xml
<CustomField>
    <fullName>IB_Partner_Customer_Of__c</fullName>
    <description>Of which of our partners is this account a customer?</description>
    <inlineHelpText>Of which of our partners is this account a customer?</inlineHelpText>
    <label>IB Partner Customer Of</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Askew</fullName>
            </value>
            <value>
                <fullName>Athenian</fullName>
            </value>
            <value>
                <fullName>Aurora North/Chris Kave</fullName>
            </value>
            <value>
                <fullName>Feynbrook</fullName>
            </value>
            <value>
                <fullName>HBR</fullName>
            </value>
            <value>
                <fullName>Huron Consulting</fullName>
            </value>
            <value>
                <fullName>Opes</fullName>
            </value>
            <value>
                <fullName>Pinnacle</fullName>
            </value>
            <value>
                <fullName>Wilson Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>