force-app/main/default/objects/Account/fields/IB_Rating__c.field-meta.xml
<CustomField>
    <fullName>IB_Rating__c</fullName>
    <description>To indicate what the customer&apos;s experience is with integration builder. For account management and product management purposes.</description>
    <inlineHelpText>Indicates customer&apos;s current IB experience.</inlineHelpText>
    <label>IB Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Concerned</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>