force-app/main/default/objects/Account/fields/IB_Technology_Organization__c.field-meta.xml
<CustomField>
    <fullName>IB_Technology_Organization__c</fullName>
    <description>Describe the technology organization.</description>
    <inlineHelpText>List key contacts. What is the reporting structure? What is the make-up of DBA and development staff?</inlineHelpText>
    <label>IB Technology Organization</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>