force-app/main/default/objects/Account/fields/IIS__c.field-meta.xml
<CustomField>
    <fullName>IIS__c</fullName>
    <label>IIS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Integration Service - Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>