force-app/main/default/objects/Account/fields/iManage_Plug_in__c.field-meta.xml
<CustomField>
    <fullName>iManage_Plug_in__c</fullName>
    <description>Do they own the iManage Plugin?</description>
    <label>iManage Plug-in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own it</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>