force-app/main/default/objects/Account/fields/Impending_Merger__c.field-meta.xml
<CustomField>
    <fullName>Impending_Merger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to show if account needs to be merged</description>
    <label>Impending Merger</label>
    <type>Checkbox</type>
</CustomField>