force-app/main/default/objects/Account/fields/Implementation_Model__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Model__c</fullName>
    <description>CR# 40059</description>
    <label>Implementation Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hosted</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>On-prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>