force-app/main/default/objects/Account/fields/Initiative_Ranking_2__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Ranking_2__c</fullName>
    <label>Initiative Ranking 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polycentric Strategy</fullName>
            </value>
            <value>
                <fullName>Key Client/Sectors</fullName>
            </value>
            <value>
                <fullName>Increasing Market Share</fullName>
            </value>
            <value>
                <fullName>Lateral Hires</fullName>
            </value>
            <value>
                <fullName>Margin/Efficiency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>