force-app/main/default/objects/Account/fields/Initiative_to_bring_new_clients__c.field-meta.xml
<CustomField>
    <fullName>Initiative_to_bring_new_clients__c</fullName>
    <description>Does the firm have an initiative to bring new clients?</description>
    <inlineHelpText>Does the firm have an initiative to bring new clients?</inlineHelpText>
    <label>Initiative to bring new clients?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>