force-app/main/default/objects/Account/fields/Insider_Lists__c.field-meta.xml
<CustomField>
    <fullName>Insider_Lists__c</fullName>
    <label>Insider Lists</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own It</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>