force-app/main/default/objects/Account/fields/Insides_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Insides_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the Inside Sales Representative assigned to this account?</description>
    <label>Insides Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>