force-app/main/default/objects/Account/fields/Insurance_Broker__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Broker__c</fullName>
    <description>Name of Insurance Broker</description>
    <label>Insurance Broker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aon</fullName>
            </value>
            <value>
                <fullName>Arthur J Gallagher</fullName>
            </value>
            <value>
                <fullName>Marsh</fullName>
            </value>
            <value>
                <fullName>Paragon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>