force-app/main/default/objects/Account/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <inlineHelpText>What New Business Intake product does the customer currently use?</inlineHelpText>
    <label>Intake</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aderant NBI</fullName>
            </value>
            <value>
                <fullName>AgilePoint</fullName>
            </value>
            <value>
                <fullName>BizFlow</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>DB/Text</fullName>
            </value>
            <value>
                <fullName>Dimension Data</fullName>
            </value>
            <value>
                <fullName>Elegrity</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Elite 3E</fullName>
            </value>
            <value>
                <fullName>Elite Relay</fullName>
            </value>
            <value>
                <fullName>FloSuite</fullName>
            </value>
            <value>
                <fullName>Frayman Compliflow NBI</fullName>
            </value>
            <value>
                <fullName>iManage</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Interwoven NBI</fullName>
            </value>
            <value>
                <fullName>K2</fullName>
            </value>
            <value>
                <fullName>LegalKey NBI</fullName>
            </value>
            <value>
                <fullName>Lexis One</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>MatterSphere</fullName>
            </value>
            <value>
                <fullName>Metastorm</fullName>
            </value>
            <value>
                <fullName>Metastorm (9+ Version)</fullName>
            </value>
            <value>
                <fullName>Metastorm (Pre 9 Version)</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peppermint Technology</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Ultimus/Elegrity</fullName>
            </value>
            <value>
                <fullName>viFormPath</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>