force-app/main/default/objects/Account/fields/Intake_Product__c.field-meta.xml
<CustomField>
    <fullName>Intake_Product__c</fullName>
    <label>Intake</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake - Cloud</fullName>
            </value>
            <value>
                <fullName>Intake - On Prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>